# redis-consumer-template

./: Cargo.toml  compose.yml
src/: consumer.rs  main.rs  simple_stream_autoclaim_reply.rs
src/util/: mod.rs
src/util/types/: mod.rs  simple_stream_auto_claim_reply.rs
